--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,5 +9,5 @@ bind -n C-PgDn next-window
 bind -n C-PgUp previous-window
 set -g @tmux_power_theme 'sky'
 
-run-shell "~/.tmux-power.tmux"
+run-shell "~/.config/tmux/power.tmux"
 
