--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -548,10 +548,10 @@ disabled = true
 
 [hostname]
 ssh_only = false
-ssh_symbol = "🌐 "
+ssh_symbol = " 🌐"
 trim_at = "."
 detect_env_vars = []
-format = "[@$ssh_symbol$hostname]($style) "
+format = "[@$hostname$ssh_symbol]($style) "
 style = "green"
 disabled = false
 
