--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,11 +2,14 @@ set -g base-index 1
 set -g pane-base-index 1
 
 unbind C-b
-set-option -g prefix C-a
 
 bind -n C-t new-window
 bind -n C-PgDn next-window
 bind -n C-PgUp previous-window
+
+set -g prefix C-a
+set -g default-terminal "screen-256color"
+set -g default-shell /bin/zsh
 set -g @tmux_power_theme 'sky'
 
 run-shell "~/.config/tmux/power.tmux"
