--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -2,3 +2,8 @@
 python = "3.12"
 node = "22.1.0"
 neovim = "latest"
+gh = "latest"
+jq = "latest"
+jless = "latest"
+dust = "latest"
+aws = "latest"
