--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -1,9 +1,15 @@
 [tools]
 python = "3.12"
-node = "22.1.0"
-neovim = "latest"
+node = "latest"
+neovim = "0.11.3"
 gh = "latest"
 jq = "latest"
 jless = "latest"
 dust = "latest"
 aws = "latest"
+fd = "latest"
+k9s = "latest"
+npm = "latest"
+
+[settings]
+idiomatic_version_file_enable_tools = []
