--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -13,6 +13,10 @@ npm = "latest"
 duf = "latest"
 fzf = "latest"
 zoxide = "latest"
+bat = "latest"
+lua-language-server = "latest"
+uv = "latest"
+stylua = "latest"
 
 [settings]
 idiomatic_version_file_enable_tools = []
