fix: tmux true color

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,9 +10,13 @@ bind -n C-PgDn next-window
 bind -n C-PgUp previous-window
 
 set -g prefix C-a
-set -g default-terminal "screen-256color"
+
 set -g default-shell /bin/zsh
 set -g @tmux_power_theme 'sky'
 
 run-shell "~/.config/tmux/power.tmux"
+
+set -g  default-terminal            "tmux-256color"
+set -ga terminal-overrides          ",xterm-256color:Tc"
+
 
